# Madus-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Madus/: CMakeLists.txt
Madus/include/Madus/: App.h  Camera.h  CharacterController.h  Engine.h  Input.h  Level.h  Math.h  Mesh.h  Renderer.h  Shader.h  Texture.h
Madus/src/: CharacterController.cpp  Engine.cpp  Input.cpp  Level.cpp  Math.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
Sandbox/: CMakeLists.txt
Sandbox/assets/levels/: room01.txt
Sandbox/src/: main.cpp
sandbox/: CMakeLists.txt
tools/: setup.ps1
